some refactoring and adding tests